tests/fixtures/negative/skp1-unsupported-scrypt-params.hex
534b50310101010000100000
0000000000000000000000000000000000000000000000000000000000000000
0000000000000000
000080010000000800000001
